spade-tests/src/snapshots/spade_tests__typeinference__non_existing_fields_on_normal_variables_in_pipelines.snap
---
source: spade-tests/src/typeinference.rs
---
struct X {a: bool}

pipeline(1) a(clk: clk) -> bool {
    reg;
        let x = X(false);
        let y = x.b;
        y
}


error: X has no field named b
  ┌─ testinput:6:19
  │
6 │         let y = x.b;
  │                   ^ Not a field of X


